<resources>
    <string name="app_name">Bicycle Navigator</string>
    <string name="welcome_message">Welcome back, Rider!</string>
    <string name="welcome_qustions">What do you want to do?</string>
    <string name="button_1">Generate Your Route</string>
    <string name="button_2">Explore Saved Rides</string>
    <string name="button_3">View Your Stats</string>
    <string name="button_4">Create Route Manually</string>
    <string name="get_started">GET STARTED</string>
    <string name="saved_rides">Saved Rides</string>
    <string name="plan_your_trip">Plan Your Trip</string>
    <string name="create_manual_route">Create Manual Route</string>
    <string name="manage_app_settings"><![CDATA[Manage App & Settings]]></string>
    <string name="your_ride_route">Your Ride Route</string>
    <string name="stop_navigation">STOP NAVIGATION</string>
    <string name="start_navigation">START NAVIGATION</string>
    <string name="resume_navigation">RESUME NAVIGATION</string>
    <string name="delete_string">Are you sure you want to delete this trip?</string>
    <string name="delete_all_string">Are you sure you want to delete all data?</string>
    <string name="view_on_map">View On Map</string>
    <string name="save">Save</string>
    <string name="go_to_demo"><u>Go to demo</u></string>
</resources>